@@ -1,5 +1,9 @@
 Changes for APR 1.3.0
 
+  *) multicast: apr_mcast_*() no longer return APR_ENOTIMPL when invoked
+     for non-UDP/RAW sockets. The caller is expected to ensure that the
+     socket-type is suitable for multicast. [Colm MacCarthaigh]
+
   *) Add apr_sockaddr_ip_getbuf() function.  [Joe Orton]
 
   *) Fix handling of %pI in apr_psprintf.  [Joe Orton]
